# bridge-db

./: .gitignore  AGENTS.md  CLAUDE.md  OPERATOR-CHECKLIST.md  PHASE-3-DECISION.md  README.md  ROADMAP.md  bridge-db-semantic-memory-IMPLEMENTATION-PLAN-v2.1.md  bridge-db-semantic-memory-IMPLEMENTATION-PLAN-v2.md  codex-migration.md  eval-set-handoff-package.md  integration-spec.md  pyproject.toml  semantic_quality_set.json
.codex/: verify.commands
src/bridge_db/: __init__.py  __main__.py  audit.py  codex_seed.py  config.py  db.py  migration.py  models.py  server.py
src/bridge_db/tools/: __init__.py  activity.py  audit.py  context.py  cost.py  export.py  handoffs.py  health.py  recall.py  snapshots.py
tests/: conftest.py  test_activity.py  test_audit.py  test_audit_tool.py  test_cli.py  test_codex_seed.py  test_context.py  test_db.py  test_export.py  test_handoffs.py  test_health.py  test_migration.py  test_recall.py  test_snapshots.py
