[project]
name = "bridge-db"
version = "0.1.0"
description = "SQLite-backed MCP server for cross-system state sharing between Claude.ai, Claude Code, and Codex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "mcp>=1.25,<2.0",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
# Tool functions are registered via @mcp.tool() decorator side effects — pyright can't see this
reportUnusedFunction = "none"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
